logdata-anomaly-miner (0.0.7~pre0) xenial; urgency=low

  New features:
  * Datetime parsing reimplemented in DateTimeModelElement to
    fix various shortcomings of strptime in Python and libc.
  * ElementValueBranchModelElement added to support conditional
    branching.

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Wed,  7 Nov 2016 08:00:00 +0000

logdata-anomaly-miner (0.0.6) xenial; urgency=low

  New features:
  * Added "LogAtom" and "AtomHandlerInterface" to pass data from
    IO-layer to upper layers consistently.
  * Added TimestampsUnsortedDetector.py to fail (exit) when data
    is not properly sorted.
  * Added SimpleMultisourceAtomSync.py to merge LogAtoms read
    from parallel streams, e.g. from multiple logfiles.

  Bugfixes:
  * Logic flaw in logfile rollover handling, selecting on bad fd.
  * Unassigned, reused variable caused same logfile to be opened
    more than once.

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Fri, 4 Nov 2016 18:00:00 +0000

logdata-anomaly-miner (0.0.5) xenial; urgency=low

  * New features:
    * Added helper class for parser matching process debugging.
    * Added interface to ease detector state updates after triggering
      an event.
    * Added minimal model for parsing Tomcat start/stop syslog messages.
    * Added support for logfile reading continuation after shutdown,
      alternative lowlevel data stream splitting tools (atomizers).
  * Bugfixes:
    * Fixed file descriptor leak in PersistencyUtil.py on store.

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Tue, 11 Oct 2016 18:00:00 +0000

logdata-anomaly-miner (0.0.4) xenial; urgency=low

  * New features:
    * NewMatchPathValueComboDetector: Detect new combination of
      values for list of data pathes, e.g. for link analysis.
    * ParsedAtomFilterMatchAction: Forward data to specific handlers
      when rules match.
    * VolatileLogarithmicBackoffEventHistory: Added unique EventId
    * Pass event source reference to event handlers to allow query/change